<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">parkshare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_startup">StartupActivity</string>
    <string name="startupinfo">启动界面</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="LogIntoPortshare">登陆</string>
    <string name="Signupforportshare">注册</string>
    <string name="contentDescription">icon</string>
    <string name="forgetpassword"><u>忘记密码?</u></string>
    <string name="title_activity_register">注册</string>
    <string name="registerpassword">密码</string>
    <string name="registername">用户名</string>
    <string name="registerconfirmpass">重复密码</string>
    <string name="registertelephone">电话</string>
    <string name="registeremail">邮箱</string>
    <string name="registercharrange">a~a.A~Z.0~9</string>
    <string name="registersure">确认注册</string>
    <string name="registererrorinfo">错误信息</string>
    <string name="title_activity_andy_pager">title_activity_andy_pager</string>
    <string name="TabHostActivity">TabHostActivity</string>
    <string name="title_activity_parking_details">ParkingDetailsActivity</string>
    <string name="description">车位描述</string>
    <string name="period">有效期</string>
    <string name="address">停车场地址</string>
    <string name="remarks">备注</string>
    <string name="navigation">导航</string>
    <string name="unlock">开锁</string>
    <string name="list">菜单</string>
    <string name="edit">编辑</string>
    <string name="share">分享</string>
    <string name="cancelshare">取消分享</string>
    <string name="cancelbooking">取消预订</string>
    <string name="collect">收藏</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_add_park_lock">AddParkLockActivity</string>
    <string name="locknumber">车位锁序列号</string>
    <string name="lockcode">车位锁密钥</string>
    <string name="parkaddress">停车场地址</string>
    <string name="remark">备注</string>
    <string name="confirmaddlock">确认添加车位锁</string>
    <string name="search">搜索</string>
    <string name="addpark">添加车位锁</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_rentable_park_info">RentableParkInfoActivity</string>
    <string name="parkdescription">车位描述</string>
    <string name="validity">车位有效期</string>
    <string name="ownertelephone">车位主联系方式</string>
    <string name="feescale">租费</string>
    <string name="starttime">起始时间</string>
    <string name="endtime">结束时间</string>
    <string name="makeoder">预约</string>
    <string name="openpark">开</string>
    <string name="closepark">关</string>
    <string name="timeexmaple">2014-10-02 12:50:30</string>
    <string name="title_activity_park_own">ParkOwnActivity</string>
    <string name="title_activity_receive">ReceiveRequestActivity</string>
    <string name="estimatedfee">预计费用</string>
    <string name="rentertelephone">申请者联系电话</string>
    <string name="accept">接收申请</string>
    <string name="refuse">拒绝申请</string>
    <string name="activity_text_starttime">开始时间</string>
    <string name="activity_text_endtime">结束时间</string>
    <string name="rentstate">租用状态</string>
    <string name="openkey">开锁密钥</string>
    <string name="closekey">关锁密钥</string>
    <string name="macaddress">蓝牙地址</string>
    <string name="parkmanagment">我的车位管理</string>
    <string name="logout">注销账户</string>
    <string name="longitude">经度</string>
    <string name="latitude">维度</string>
    <string name="helpabout">帮助与关于</string>
    <string name="checkupdate">检查更新</string>
    <string name="settings">设置</string>
    <string name="sharename">用户</string>
    <string name="borrowtime">租用时间</string>
    <string name="borrowcost">租用花费</string>
    <string name="myparkinfo">我的车位详情</string>
    <string name="rentparkinfo">租用车位详情</string>
    <string name="switch_update">开启检测更新</string>
    <string name="switch_notify">接收通知</string>
    <string name="switch_shortcut">设置快捷键</string>
    <string name="switch_ble">启动蓝牙</string>
    <string name="switch_password">记住密码</string>


    <string name="title_activity_bnavigator">BNavigatorActivity</string>
    <string name="title_activity_collapse_activity">CollapseActivityActivity</string>

	<string name="test">陈雷在字符串资源文件的98行添加了一条雷要用到的字符串</string>

	<string name="testtest">赵迪生在字符串资源文件的98行添加了一条赵迪生要用到的字符串</string>

</resources>
