<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ych.parkshare.ParkRentActivity" >
<!-- title -->
    <TextView
        android:id="@+id/activity_park_rent_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="租用车位信息"
        android:textSize="20dp" />
<!--  描述 -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_park_rent_text_title"
        android:layout_marginTop="20dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/textView1"
        android:background="@color/white" />
<!-- 开始时间 -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:text="@string/activity_text_starttime" />

    <TextView
        android:id="@+id/activity_park_rent_text_starttime"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/textView2"
        android:background="@color/white" />
<!-- 結束時間 -->    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_park_rent_text_starttime"
        android:text="@string/activity_text_endtime" />

    <TextView
        android:id="@+id/activity_park_rent_text_endtime"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/textView5"
        android:background="@color/white" />
<!-- 地址 -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_park_rent_text_endtime"
        android:text="@string/address" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/textView3"
        android:background="@color/white" />
<!-- 备注 -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:text="@string/remark" />

    <TextView
        android:id="@+id/remarks"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/textView4"
        android:background="@color/white" />

    <Switch
        android:id="@+id/parkdetail_switch_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textOff="@string/closepark"
        android:textOn="@string/openpark" />

</RelativeLayout>