<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:scrollbars="horizontal"
    tools:context="com.example.portshare.LoginActivity" >

    <ImageView
        android:id="@+id/imageViewicon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/contentDescription"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewicon"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginTop="8dp"
        android:background="@drawable/loginformbackground"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextname"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <requestFocus />
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editTextpassword"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="20dp"
        android:background="@drawable/loginbuttonbackground"
        android:text="@string/LogIntoPortshare" />

    <Button
        android:id="@+id/buttonsignup"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/signupbuttonbackground"
        android:text="@string/Signupforportshare" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsignup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />

</RelativeLayout>