<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffcc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ych.parkshare.ParkingDetailsActivity" >

    <LinearLayout
        android:id="@+id/details1"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="40dp">
        
        <TextView 
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:hint="@string/description"/>
        
        <View android:layout_width="fill_parent"
              android:layout_height="20dp" 
              android:background="#ffffcc"/>
        
        <TextView 
            android:id="@+id/period"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:hint="@string/period"/>
        
        <View android:layout_width="fill_parent"
              android:layout_height="20dp" 
              android:background="#ffffcc"/>
        
        <TextView 
            android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:hint="@string/address"/>
        
        <View android:layout_width="fill_parent"
              android:layout_height="20dp" 
              android:background="#ffffcc"/>
        
        <TextView 
            android:id="@+id/remarks"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:hint="@string/remarks"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/details2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details1"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="30dp">
        
        <Button 
            android:id="@+id/navigation"
            android:layout_width="fill_parent"
            android:background="@color/white"
            android:layout_height="45dp"
            android:text="@string/navigation"
            android:textColor="#cc3300"/>
        
         <View android:layout_width="fill_parent"
              android:layout_height="30dp" 
              android:background="#ffffcc"/>
        
        <Button 
            android:id="@+id/unlock"
            android:layout_width="fill_parent"
            android:background="@color/white"
            android:layout_height="45dp"
            android:text="@string/unlock"
            android:textColor="#cc3300"/>
        
    </LinearLayout>

</RelativeLayout>
