<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tabhome_background"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context="com.ych.parkshare.AddParkLockActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="70dp"
        android:gravity="bottom"
        android:text="@string/parkaddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_addpark_address"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/textView1"
        android:layout_marginTop="5dp"
        android:background="@drawable/loginformbackground"
        android:gravity="bottom"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/et_addpark_address"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:text="@string/description"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_addpark_describe"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/textView2"
        android:layout_marginTop="5dp"
        android:background="@drawable/loginformbackground"
        android:gravity="bottom"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/et_addpark_describe"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:text="@string/locknumber"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_addpark_serialr"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/textView3"
        android:layout_marginTop="5dp"
        android:background="@drawable/loginformbackground"
        android:gravity="bottom"
        android:textSize="20sp" >
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/et_addpark_serialr"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:text="@string/remark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_addpark_remark"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/textView4"
        android:layout_marginTop="5dp"
        android:background="@drawable/loginformbackground"
        android:gravity="bottom"
        android:textSize="20sp" >
    </EditText>

    <Button
        android:id="@+id/addlockbutton"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="70dp"
        android:layout_below="@id/et_addpark_remark"
        android:background="@drawable/login_button_background"
        android:text="@string/confirmaddlock" />

</RelativeLayout>