<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ych.parkshare.ReceiveRequestActivity" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/parkdescription" />
        <EditText
            android:id="@+id/editparkdescription"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginformbackground">

            <requestFocus />
        </EditText>        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/starttime" />
        <EditText
            android:id="@+id/editstarttime"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginformbackground">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/endtime" />
        <EditText
            android:id="@+id/editendtime"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginformbackground">

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/estimatedfee" />
        <EditText
            android:id="@+id/editestimatedfee"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginformbackground">

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rentertelephone" />
        <EditText
            android:id="@+id/editrentertelephone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginformbackground">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/acceptrequestbutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/refuserequestbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/confirmbuttonbackground"
        android:text="@string/accept" />

    <Button
        android:id="@+id/refuserequestbutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/confirmbuttonbackground"
        android:text="@string/refuse" />

</RelativeLayout>
